[package]
name = "instalar_office"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
strum = "0.24"
strum_macros = "0.24"

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "^0.1"
